<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.logicsquad</groupId>
	<artifactId>wounit</artifactId>
	<packaging>jar</packaging>
	<version>2.0</version>
	<name>WOUnit Framework</name>
	<description>JUnit Jupiter extensions for testing WebObjects and Project Wonder Enterprise Objects in memory.</description>
	<url>https://github.com/logicsquad/wounit</url>
	<inceptionYear>2009</inceptionYear>

	<organization>
		<name>Logic Squad</name>
		<url>https://logicsquad.net</url>
	</organization>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/logicsquad/wounit/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<id>hprange</id>
			<name>Henrique Prange</name>
			<email>hprange@gmail.com</email>
			<organization>DOit S/A</organization>
			<organizationUrl>www.doit.com.br</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Paul Hoadley</name>
			<organization>Logic Squad</organization>
			<organizationUrl>https://logicsquad.net</organizationUrl>
			<roles>
				<role>Maintainer</role>
			</roles>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/logicsquad/wounit.git</connection>
		<url>https://github.com/logicsquad/wounit</url>
		<developerConnection>scm:git:https://github.com/logicsquad/wounit.git</developerConnection>
		<tag>HEAD</tag>
  </scm>

	<properties>
		<wonder.version>7.4</wonder.version>
		<webobjects.version>5.4.3</webobjects.version>
		<junit.version>6.1.3</junit.version>
		<mockito.version>5.24.0</mockito.version>
		<slf4j.version>1.7.36</slf4j.version>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- A rehearsal of the deploy workflow sets this to false -->
		<central.autoPublish>true</central.autoPublish>
	</properties>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<!-- Signs with the key that the deploy workflow imports, using the
							passphrase in MAVEN_GPG_PASSPHRASE -->
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<configuration>
							<gpgArguments>
								<arg>--batch</arg>
								<arg>--yes</arg>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<!-- Uploads to the Central Portal, with the credentials of the
							central server in .maven_settings.xml -->
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.11.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>${central.autoPublish}</autoPublish>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.12.0</version>
					<configuration>
						<!-- The default footer credits the organization with the whole project;
							this one follows the source headers -->
						<bottom><![CDATA[Copyright &#169; 2009 Henrique Prange. Modifications copyright &#169; 2026 Logic Squad. Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.]]></bottom>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.16.0</version>
			</plugin>
			<plugin>
				<!-- Sets ${org.mockito:mockito-core:jar} for the Surefire argLine -->
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.11.0</version>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<!-- Mockito's inline mock maker needs its agent; attaching it at runtime
						is deprecated since Java 21 -->
					<argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
					<excludes>
						<exclude>**/*StubTestCase.java</exclude>
						<exclude>**/TestPartialEntities*.java</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<!-- These classes switch Wonder's partial entities on and off for the
							whole JVM, so each runs in a JVM of its own -->
						<id>partial-entities</id>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<reuseForks>false</reuseForks>
							<includes>
								<include>**/TestPartialEntities*.java</include>
							</includes>
							<excludes>
								<exclude>**/*StubTestCase.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- Builds the Javadoc jar whenever the project is packaged, so the jar
					published is the one checked. Any doclint warning, a missing comment
					included, fails the build -->
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<doclint>all</doclint>
					<failOnWarnings>true</failOnWarnings>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- Doclint can't see a package without a package-info.java -->
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<checkstyleRules>
						<module name="Checker">
							<module name="JavadocPackage" />
						</module>
					</checkstyleRules>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>14.1.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.22.0</version>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Wonder and WebObjects are provided: every project that uses WOUnit
			has its own, so WOUnit doesn't bring different versions -->
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERFoundation</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERExtensions</artifactId>
			<version>${wonder.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>wonder.eoadaptors</groupId>
			<artifactId>JavaMemoryAdaptor</artifactId>
			<version>${wonder.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>wonder.eof</groupId>
			<artifactId>ERAttributeExtension</artifactId>
			<version>${wonder.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaFoundation</artifactId>
			<version>${webobjects.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaEOAccess</artifactId>
			<version>${webobjects.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaEOControl</artifactId>
			<version>${webobjects.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<!-- Wonder brings slf4j-api, so users keep theirs; building against 1.7
				limits WOUnit to the API that SLF4J 1.7 and 2.x share -->
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERPrototypes</artifactId>
			<version>${wonder.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<detectLinks>true</detectLinks>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<linkJavadoc>true</linkJavadoc>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.28.0</version>
				<configuration>
					<linkXref>true</linkXref>
					<targetJdk>${maven.compiler.release}</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.6.0</version>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.10.4.1</version>
			</plugin>
		</plugins>
	</reporting>
</project>
